--- a/salikneta/templates/salikneta/home.html
+++ b/salikneta/templates/salikneta/home.html
@@ -51,7 +51,7 @@
           <!-- **********************************************************************************************************************************************************
               RIGHT SIDEBAR CONTENT
               *********************************************************************************************************************************************************** -->
-          <div class="col-lg-3 ds" style="height: 93vh">
+          <div class="col-lg-3 ds" style="height: 93vh ; overflow:scroll;">
             <h4 class="centered mt">RECENT UPDATES</h4>
             <!-- First Activity -->
             {% for notif in notifs %}
