--- a/salikneta/templates/salikneta/login.html
+++ b/salikneta/templates/salikneta/login.html
@@ -15,7 +15,14 @@
     <div class="container">
       <form class="form-login" method="post" action="{% url 'verify' %}">
           {% csrf_token %}
-          <h2 class="form-login-heading">Salikneta POSIS <p class="text-muted" style="font-size: 14px">Sales and Inventory System</p></h2>
+          <h2 class="form-login-heading">Salikneta POSIS 
+            <center>
+              {% load staticfiles %}
+              <img src="{% static 'img/salikneta_ico.png' %}" style="height: 10vh;width:5vw">
+
+            </center>
+            <p class="text-muted" style="font-size: 14px">Sales and Inventory System</p></h2>
+        
         <div class="login-wrap">
           <input type="text" class="form-control" name="user" placeholder="Username / Email" autofocus>
           <br>
