--- a/salikneta/templates/salikneta/includes/header.html
+++ b/salikneta/templates/salikneta/includes/header.html
@@ -92,6 +92,8 @@
               <li><a href="{% url 'manageItems' %}">Items</a></li>
               <li><a href="{% url 'manageSuppliers' %}">Supplier</a></li>
               <li><a href="{% url 'manageCategories'%}">Categories</a></li>
+              <li><a href="{% url 'manageRawMaterials'%}">Raw Materials</a></li>
+              <li><a href="{% url 'manageIngredients'%}">Ingredients</a></li>
             </ul>
           </li>
           <li class="mt">
