added link from product to ingredients

--- a/salikneta/templates/salikneta/includes/header.html
+++ b/salikneta/templates/salikneta/includes/header.html
@@ -93,7 +93,7 @@
               <li><a href="{% url 'manageSuppliers' %}">Supplier</a></li>
               <li><a href="{% url 'manageCategories'%}">Categories</a></li>
               <li><a href="{% url 'manageRawMaterials'%}">Raw Materials</a></li>
-              <li><a href="{% url 'manageIngredients'%}">Ingredients</a></li>
+              <li><a href="{% url 'manageIngredients' 0 %}">Ingredients</a></li>
             </ul>
           </li>
           <li class="mt">
