--- a/salikneta/templates/salikneta/manageIngredients.html
+++ b/salikneta/templates/salikneta/manageIngredients.html
@@ -101,7 +101,7 @@
               <h4 class="mb"><i class="fa fa-apple"></i>Ingredients for Items</h4>
               <h5 class="mb">Select an Item</h5>
               <select  class="form-control" name="products" id="products">
-                    <option value="-1"></option>
+                    <option value="0"></option>
                     {% for product in products %}
                       <option value="{{product.pk}}">{{product.name}}</option>
                     {% endfor %}
@@ -134,6 +134,28 @@
 </body>
 
 <script>
+    $(document).ready(function(){
+        var productPk = $("#products").val({{ productID }});
+        getIngredients(productPk.val());
+    });
+
+    function getIngredients(pk){
+        $.ajax({
+          url: '{% url "ajaxGetIngredients" %}',
+          data: {
+            "productPk":pk,
+          },
+          dataType: 'json',
+          success: function(data){
+              update_table(data);
+          },
+          error: function () {
+            alert("error");
+          },
+
+        });
+    }
+
     function editItem_Price(obj){
 
         $("#e_price").val($(obj).attr("item_price"));
@@ -149,20 +171,7 @@
         else
             $("#ingredientsButton").attr("disabled", true);
 
-        $.ajax({
-          url: '{% url "ajaxGetIngredients" %}',
-          data: {
-            "productPk":$(this).val(),
-          },
-          dataType: 'json',
-          success: function(data){
-              update_table(data);
-          },
-          error: function () {
-            alert("error");
-          },
-
-        });
+        getIngredients($(this).val());
     });
 
     $( "#rawMaterial" ).change(function() {
