--- a/salikneta/templates/salikneta/manageRawMats.html
+++ b/salikneta/templates/salikneta/manageRawMats.html
@@ -70,7 +70,7 @@
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                       <h4 class="modal-title" id="myModalLabel">EDIT RAW MATERIAL STOCKS</h4>
                     </div>
-                  <form action="{% url 'editItemPrice' %}" method="post">
+                  <form action="{% url 'editMaterialStock' %}" method="post">
                   {% csrf_token %}
                   <input type="hidden" name="item_id" id="item_id" value="">
                     <div class="modal-body">
@@ -81,7 +81,7 @@
                              <input type="text" class="form-control" id="e_itemName" name="itemName" placeholder="Item name" readonly>
                            </div>
                            <div class= "col-md-6">
-                              <label class="control-label">Product ID</label>
+                              <label class="control-label">Raw Material ID</label>
                               <input  class="form-control" name="item_code" id="e_id" readonly>
                               </input>
                            </div>
@@ -107,7 +107,7 @@
         <div class="row mt">
           <div class="col-lg-12">
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-apple"></i> Current Inventory for Raw Materials</h4>
+              <h4 class="mb"><i class="fa fa-apple"></i> Current Inventory for Raw Materials in {{ branch.name }} Branch</h4>
               <button class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal" style="margin-bottom: 1vh">Add Raw Materials</button>
 
                 <table id="itm_tbl" class="table table-bordered table-striped table-condensed">
@@ -123,7 +123,7 @@
                       {% for rawmaterial in rawmaterials %}
                           <tr style="color:black">
                               <td>{{rawmaterial.name}}</td>
-                              <td>{{rawmaterial.unitsInStock}} <a href="#" data-toggle="modal" data-target="#modal_edit"  item_code="{{ rawmaterial.get_material_code }}" item_name="{{ rawmaterial.name }}" item_stock="{{ rawmaterial.unitsInStock }}" item_id="{{ rawmaterial.idProduct }}" onclick="edit_Stock(this)"><i class="fa fa-edit"></i></a></td>
+                              <td>{{rawmaterial.unitsInStock}} <a href="#" data-toggle="modal" data-target="#modal_edit"  item_code="{{ rawmaterial.get_material_code }}" item_name="{{ rawmaterial.name }}" item_stock="{{ rawmaterial.unitsInStock }}" item_id="{{ rawmaterial.idrawmaterials }}" onclick="edit_Stock(this)"><i class="fa fa-edit"></i></a></td>
                               <td>{{rawmaterial.unitOfMeasure}}</td>
                               <td>{{rawmaterial.idSupplier.name }}</td>
                           </tr>
