separated modules per user, 1 branch for animal&vegetable, added updated sql

--- a/salikneta/templates/salikneta/includes/cashier_header.html
+++ b/salikneta/templates/salikneta/includes/cashier_header.html
@@ -71,16 +71,20 @@
               <span>Dashboard</span>
             </a>
           </li>
+          <li class="sub">
+            <a class="{% if request.resolver_match.view_name ==  'pos' %}active{% endif %}" href="{% url 'pos' %}">
+              <i class="fa fa-calculator"></i>
+              <span>POS</span>
+            </a>
+          </li>
           <li class="sub-menu">
             <a href="javascript:;" class="{% if request.resolver_match.view_name ==  'transferOrder' or request.resolver_match.view_name == 'backload' or request.resolver_match.view_name == 'purchaseOrder' or request.resolver_match.view_name == 'produceItems' %}active{% endif %}">
               <i class="fa fa-shopping-basket"></i>
               <span>Inventory</span>
               </a>
             <ul class="sub">
-              <li class="{% if request.resolver_match.view_name ==  'purchaseOrder'%}active{% endif %}"><a href="{% url 'purchaseOrder' %}">Purchase Orders</a></li>
               <li class="{% if request.resolver_match.view_name ==  'transferOrder'%}active{% endif %}"><a href="{% url 'transferOrder'%}">Transfer Orders</a></li>
               <li class="{% if request.resolver_match.view_name ==  'backload'%}active{% endif %}"><a href="{% url 'backload'%}">Backloads</a></li>
-              <li class="{% if request.resolver_match.view_name ==  'produceItems'%}active{% endif %}"><a href="{% url 'produceItems' 0%}">Produce Items</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -91,10 +95,7 @@
               </a>
             <ul class="sub">
               <li class="{% if request.resolver_match.view_name ==  'manageItems'%}active{% endif %}"><a href="{% url 'manageItems' %}">Products</a></li>
-              <li class="{% if request.resolver_match.view_name ==  'manageSuppliers'%}active{% endif %}"><a href="{% url 'manageSuppliers' %}">Supplier</a></li>
               <li class="{% if request.resolver_match.view_name ==  'manageCategories'%}active{% endif %}"><a href="{% url 'manageCategories'%}">Categories</a></li>
-              <li class="{% if request.resolver_match.view_name ==  'manageRawMaterials'%}active{% endif %}"><a href="{% url 'manageRawMaterials'%}">Raw Materials</a></li>
-              <li class="{% if request.resolver_match.view_name ==  'manageIngredients'%}active{% endif %}"><a href="{% url 'manageIngredients' 0 %}">Ingredients</a></li>
             </ul>
           </li>
           <li class="mt">
