--- a/salikneta/templates/salikneta/purchaseOrder.html
+++ b/salikneta/templates/salikneta/purchaseOrder.html
@@ -222,7 +222,7 @@
                               <div class="col-md-6">
                                 <label>Ship to</label>
                                 <select class="form-control" id="shipTo">
-                                  <option>{{branch}}</option>
+                                  <option>{{branch.name}}</option>
                                     
                                 </select>
                               </div>
