--- a/salikneta/templates/salikneta/backloads.html
+++ b/salikneta/templates/salikneta/backloads.html
@@ -9,9 +9,7 @@
   	}
   </style>
 
-
-
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
 
  <section id="main-content">
       <section class="wrapper">
