--- a/salikneta/templates/salikneta/home.html
+++ b/salikneta/templates/salikneta/home.html
@@ -6,7 +6,7 @@
 <body>
   <section id="container">
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
@@ -20,32 +20,37 @@
               <h3>Tool Basket</h3>
             </div>
             <!-- /row -->
-            <div class="row">
+
 
           {% if request.session.usertype == 'cashier' %}
-              <div class="col-md-4 mb">
-                <div class="twitter-panel pn">
-                  <i class="fa fa-calculator fa-4x"></i>
-                  <h4 class="mt" style="color: white">Point of Sale</h4>
-                    <a href="{% url 'pos' %}"><button class="btn btn-small ">Navigate</button></a>
-                </div>
+              <div class="row">
+                  <div class="col-md-4 mb">
+                    <div class="twitter-panel pn">
+                      <i class="fa fa-calculator fa-4x"></i>
+                      <h4 class="mt" style="color: white">Point of Sale</h4>
+                        <a href="{% url 'pos' %}"><button class="btn btn-small ">Navigate</button></a>
+                    </div>
+                  </div>
               </div>
+          {% elif request.session.usertype == 'marketing' %}
+              <div class="row">
+                  <div class="col-md-4 mb">
+                    <div class="twitter-panel pn">
+                      <i class="fa fa-shopping-basket fa-4x"></i>
+                      <h4 class="mt" style="color: white">Items</h4>
+                        <a href="{% url 'manageItems' %}"><button class="btn btn-small">Navigate</button></a>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb">
+                    <div class="twitter-panel pn">
+                      <i class="fa fa-truck fa-4x"></i>
+                      <h4 class="mt" style="color: white">Purchase Orders</h4>
+                        <a href="{% url 'purchaseOrder' %}"><button class="btn btn-small ">Navigate</button></a>
+                    </div>
+                  </div>
+               </div>
           {% endif %}
-              <div class="col-md-4 mb">
-                <div class="twitter-panel pn">
-                  <i class="fa fa-shopping-basket fa-4x"></i>
-                  <h4 class="mt" style="color: white">Items</h4>
-                    <a href="{% url 'manageItems' %}"><button class="btn btn-small">Navigate</button></a>
-                </div>
-              </div>
-              <div class="col-md-4 mb">
-                <div class="twitter-panel pn">
-                  <i class="fa fa-truck fa-4x"></i>
-                  <h4 class="mt" style="color: white">Purchase Orders</h4>
-                    <a href="{% url 'purchaseOrder' %}"><button class="btn btn-small ">Navigate</button></a>
-                </div>
-              </div>
-            </div>
+
           </div>
           <!-- /col-lg-9 END SECTION MIDDLE -->
           <!-- **********************************************************************************************************************************************************
