--- a/salikneta/templates/salikneta/manageCategories.html
+++ b/salikneta/templates/salikneta/manageCategories.html
@@ -5,7 +5,7 @@
 <body>
   <section id="container">
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
