--- a/salikneta/templates/salikneta/manageIngredients.html
+++ b/salikneta/templates/salikneta/manageIngredients.html
@@ -4,7 +4,7 @@
 <body>
   <section id="container">
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
@@ -99,7 +99,7 @@
         <div class="row mt">
           <div class="col-lg-12">
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-apple"></i>Ingredients for Items</h4>
+              <h4 class="mb"><i class="fa fa-apple"></i>Ingredients for Products</h4>
               <h5 class="mb">Select an Item</h5>
               <select  class="form-control" name="products" id="products">
                     <option value="0"></option>
