--- a/salikneta/templates/salikneta/manageItems.html
+++ b/salikneta/templates/salikneta/manageItems.html
@@ -4,7 +4,7 @@
 <body>
   <section id="container">
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
@@ -180,8 +180,8 @@
         <div class="row mt">
           <div class="col-lg-12">
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-apple"></i> Current Inventory for Items in {{ branch.name }} Branch</h4>
-              <button class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal" style="margin-bottom: 1vh">Add Items</button>
+              <h4 class="mb"><i class="fa fa-apple"></i> Current Inventory for Products in {{ branch.name }} Branch</h4>
+              <button class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal" style="margin-bottom: 1vh">Add Product</button>
 
                 <table id="itm_tbl" class="table table-bordered table-striped table-condensed">
                   <thead>
