--- a/salikneta/templates/salikneta/manageRawMats.html
+++ b/salikneta/templates/salikneta/manageRawMats.html
@@ -4,7 +4,7 @@
 <body>
   <section id="container">
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
