--- a/salikneta/templates/salikneta/transferOrder.html
+++ b/salikneta/templates/salikneta/transferOrder.html
@@ -8,7 +8,7 @@
 .datepicker{z-index:1151 !important;}
 </style>
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
@@ -27,7 +27,6 @@
                     <tr>
                       <th>TO#</th>
                       <th>Date</th>
-
                       <th>Source Store</th>
                       <th>Destination Store</th>
                       <th>Status</th>
