fix purchase order page, logo re directs to home page

--- a/salikneta/templates/salikneta/includes/marketing_header.html
+++ b/salikneta/templates/salikneta/includes/marketing_header.html
@@ -16,7 +16,7 @@
         <img src="{% static 'img/salikneta_ico.png' %}" style="height: 3vh;width:2vw;">
       </div>
       <!--logo start-->
-      <a href="index.html" class="logo"><b>SALIKNETA<span>-POSIS</span></b></a>
+      <a href="{% url 'purchaseOrder' %}" class="logo"><b>SALIKNETA<span>-POSIS</span></b></a>
       <!--logo end-->
       <div class="nav notify-row" id="top_menu">
         <!--  notification start -->
