--- a/salikneta/templates/salikneta/purchaseOrder.html
+++ b/salikneta/templates/salikneta/purchaseOrder.html
@@ -8,7 +8,7 @@
 .datepicker{z-index:1151 !important;}
 </style>
 
-{% include 'salikneta/includes/header.html' %}
+{% include request.session.header %}
  <!-- **********************************************************************************************************************************************************
         MAIN CONTENT
         *********************************************************************************************************************************************************** -->
