--- a/salikneta/templates/salikneta/includes/animal_vegetable_header.html
+++ b/salikneta/templates/salikneta/includes/animal_vegetable_header.html
@@ -77,7 +77,7 @@
               <span>Inventory</span>
               </a>
             <ul class="sub">
-              <li class="{% if request.resolver_match.view_name ==  'transferOrder'%}active{% endif %}"><a href="{% url 'transferOrder'%}">Transfer Orders</a></li>
+              <li class="{% if request.resolver_match.view_name ==  'transferOrderRawMaterials'%}active{% endif %}"><a href="{% url 'transferOrderRawMaterials' %}">Transfer Orders Raw Materials</a></li>
             </ul>
           </li>
           <li class="sub-menu">
