--- a/salikneta/templates/salikneta/includes/marketing_header.html
+++ b/salikneta/templates/salikneta/includes/marketing_header.html
@@ -72,13 +72,21 @@
             </a>
           </li>
           <li class="sub-menu">
-            <a href="javascript:;" class="{% if request.resolver_match.view_name ==  'transferOrder' or request.resolver_match.view_name == 'backload' or request.resolver_match.view_name == 'purchaseOrder' or request.resolver_match.view_name == 'produceItems' %}active{% endif %}">
+            <a href="javascript:;" class="{% if request.resolver_match.view_name ==  'transferOrderProducts' or request.resolver_match.view_name ==  'transferOrderRawMaterials' or request.resolver_match.view_name == 'backload' or request.resolver_match.view_name == 'purchaseOrder' or request.resolver_match.view_name == 'produceItems' %}active{% endif %}">
               <i class="fa fa-shopping-basket"></i>
               <span>Inventory</span>
               </a>
             <ul class="sub">
               <li class="{% if request.resolver_match.view_name ==  'purchaseOrder'%}active{% endif %}"><a href="{% url 'purchaseOrder' %}">Purchase Orders</a></li>
-              <li class="{% if request.resolver_match.view_name ==  'transferOrder'%}active{% endif %}"><a href="{% url 'transferOrder'%}">Transfer Orders</a></li>
+              <li class="sub-menu">
+                  <a href="javascript:;" class="{% if request.resolver_match.view_name ==  'transferOrderProducts' or request.resolver_match.view_name ==  'transferOrderRawMaterials' %}active{% endif %}">
+                    Transfer Order
+                  </a>
+                  <ul class="sub">
+                      <li class="{% if request.resolver_match.view_name ==  'transferOrderProducts'%}active{% endif %}"><a href="{% url 'transferOrderProducts' %}">Products</a></li>
+                      <li class="{% if request.resolver_match.view_name ==  'transferOrderRawMaterials'%}active{% endif %}"><a href="{% url 'transferOrderRawMaterials' %}">Raw Materials</a></li>
+                  </ul>
+              </li>
             </ul>
           </li>
           <li class="sub-menu">
