--- a/salikneta/templates/salikneta/transferOrderProducts.html
+++ b/salikneta/templates/salikneta/transferOrderProducts.html
@@ -19,7 +19,7 @@
           <div class="col-lg-12">
 
             <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-angle-right"></i> Transfer Order</h4>
+              <h4 class="mb"><i class="fa fa-angle-right"></i> Transfer Order for Products</h4>
               <button class="btn btn-success btn-md" data-toggle="modal" data-target="#myModal" style="margin-bottom: 1vh">Add Transfer Order</button>
 
                 <table id="cat_tbl" class="table table-striped table-bordered" style="width:100%">
@@ -334,7 +334,7 @@ function updateStatus(id){
       success: function(data){  
 
         alert("Transfer order in transit!");
-        window.location.href = "{% url 'transferOrder'%}";
+        window.location.href = "{% url 'transferOrderProducts'%}";
 
       },
       error: function () {
@@ -355,7 +355,7 @@ function cancelTO(id){
       success: function(data){  
 
         alert("Transfer order cancelled!");
-        window.location.href = "{% url 'transferOrder'%}";
+        window.location.href = "{% url 'transferOrderProducts'%}";
 
       },
       error: function () {
@@ -376,7 +376,7 @@ function finishTO(id){
       success: function(data){  
 
         alert("Transfer order is done!");
-        window.location.href = "{% url 'transferOrder'%}";
+        window.location.href = "{% url 'transferOrderProducts'%}";
 
       },
       error: function () {
@@ -452,7 +452,7 @@ function finishTO(id){
       success: function(data){  
 
         alert("New transfer order is successfully added!");
-        window.location.href = "{% url 'transferOrder'%}";
+        window.location.href = "{% url 'transferOrderProducts'%}";
       },
       error: function () {
         alert("error");
