--- a/salikneta/templates/salikneta/includes/manager_header.html
+++ b/salikneta/templates/salikneta/includes/manager_header.html
@@ -87,6 +87,7 @@
               <span class="label label-danger pull-right mail-danger" id="warn" style="display: none"></span>
               </a>
             <ul class="sub">
+              <li class="{% if request.resolver_match.view_name ==  'manageItems'%}active{% endif %}"><a href="{% url 'manageItems' %}">Products</a></li>
               <li class="{% if request.resolver_match.view_name ==  'manageIngredients'%}active{% endif %}"><a href="{% url 'manageIngredients' 0 %}">Ingredients</a></li>
             </ul>
           </li>
