--- a/salikneta/templates/salikneta/manageIngredients.html
+++ b/salikneta/templates/salikneta/manageIngredients.html
@@ -100,7 +100,7 @@
           <div class="col-lg-12">
             <div class="form-panel">
               <h4 class="mb"><i class="fa fa-apple"></i>Ingredients for Products</h4>
-              <h5 class="mb">Select an Item</h5>
+              <h5 class="mb">Select Product</h5>
               <select  class="form-control" name="products" id="products">
                     <option value="0"></option>
                     {% for product in products %}
